2012-03-16  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Change symbolOopDesc to Symbol to accomodate
	S6990754 - Use native memory and reference counting to implement
	SymbolTable.

2012-08-03  Yasumasa Suenaga  <suenaga.yasumasa@lab.ntt.co.jp>

	* tapset/jstack.stp.in (NarrowOopStruct): New global.
	(hotspot.vm_init_end): Initialize NarrowOopStruct.
	(hotspot.vm_shutdown): Delete NarrowOopStruct for pid.
	(jstack_call): Use NarrowOopStruct to calculate methodOopKlass.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Wrap heap accessors in try-catch block to be
	able to report unusual frames.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Use @var construct if available to pick
	target variable from the right CU (needed by newer DWARF/gcc
	versions).

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Index globals on pid() to support multiple
	running hotspot jstacks at the same time.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Don't hard code constantPoolOopDesc_size.

2014-08-18  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1935: HotSpot extraction needs to depend on the
	tarball being downloaded
	* Makefile.am:
	(extract-hotspot): Depend on download-hotspot.
	* NEWS: Updated.

2014-06-02  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1813: HotSpot URL should be used with --enable-hg
	* Makefile.am:
	(HOTSPOT_URL): Drop unused variable to avoid
	confusion.
	(.PHONY): Add clean-download-hotspot.
	(download); Depend on download-hotspot.
	(clean-download): Move clean-download-nashorn
	to clean-download-openjdk to retain ordering.
	(download-openjdk): Remove hotspot from for loop
	and HotSpot zip download rules.
	(clean-download-openjdk): Depend on clean-download-nashorn
	and clean-download-hotspot.
	(download-nashorn): Depend on download-openjdk so
	root directory exists for Nashorn checkout.
	(download-hotspot): New target. Cloning now uses HS_URL